--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-fontawesome": "^1.7.1",
+    "react-lottie-player": "^2.1.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
