--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fireworks-js": "^2.10.8",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "react": "^18",
